<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">پارس آوا</string>
    <string name="tts_settings_label">Pars Ava TTS Settings</string>
    <string name="setting_default_pitch">Default pitch</string>
    <string name="setting_default_rate">Speech rate multiplier</string>
    <string name="setting_slider_value_description">%s%%</string>
    <string name="resetToDefault">reset</string>
    <string name="set_default_message">پارس آوا بعنوان موتور پیش فرض انتخاب نشده است. آیا تمایل دارید آن را بعنوان موتور پیش فرض انتخاب نمایید؟</string>
    <string name="voice_data_failed_message">Parsava failed to install voice data. Please check your SD card.</string>
    <string name="version_apk_outdated">نسخه کنونی نرم افزار دیگر پشتیبانی نمی گردد. لطفا نسخه بروزرسانی را نصب نمایید</string>
    <string name="version_apk_update">لطفا نرم افزار را به کمک لینک زیر بروزرسانی نمایید</string>
    <string name="permission_call_need">برنامه برای نصب صحیح مجوز لازم است مجوز دسترسی به مدیریت تماس ها را داشته باشد</string>
    <string name="error_message">Sorry, Parsava failed to start. Would you like to send an error report?</string>
    <string name="loading">Loading, please wait…</string>
    <string name="loading_failed">Sorry, Pars Ava failed to load.</string>
    <string name="sample_text">This is a sample of text spoken in <xliff:g>%s</xliff:g></string>
    <string name="english_simple_sample_text">This is a sample of text spoken</string>
    <string name="sample_not_ready">Sample playback is not ready yet. Please try again shortly.</string>
    <string name="eng">سلام hello</string>
    <string name="fas">سلام</string>
    <string name="voice_label">عنوان : تنظیمات صدا</string>
    <string name="voice_command">تنظیمات موتور</string>
    <string name="general_label">عنوان : تنظیمات عمومی</string>
    <string name="puncuation_command">علائم</string>
    <string name="number_command">اعداد</string>
    <string name="number_language_command">زبان اعداد</string>
    <string name="emoji_command">شکلک ها</string>
    <string name="user_dictionary_label">عنوان : تنظیمات واژگان کاربر</string>
    <string name="add_word">افزودن لغت</string>
    <string name="word_list">لیست لغات</string>
    <string name="user_dictionary_manage">مدیریت واژگان کاربر</string>
    <string name="footer_branding">خانه نور ایرانیان بصیر</string>
    <string name="advanced_title">عنوان : تنظیمات پیشرفته</string>
    <string name="tts_sample">خواندن متن نمونه</string>
    <string name="register_command">ثبت مجوز</string>
    <string name="support_command">پشتیبانی</string>
    <string name="about_command">درباره ما</string>
    <string name="about_body">مالکیت معنوی اپلیکیشن پارس آوا متعلق به خانه نور ایرانیان بصیر می باشد.\n\n
 توسعه اپلیکیشن توسط مهندس نم نبات انجام گرفته است.</string>
    <string name="title_activity_about">درباره ما</string>
    <string name="voice_settings_header">تنظیمات صدا</string>
    <string name="voice_test">تست</string>
    <string name="vnspeak_speed">سرعت</string>
    <string name="vnspeak_speed_decrease">کاهش سرعت</string>
    <string name="vnspeak_speed_increase">افزایش سرعت</string>
    <string name="vnspeak_volume">بلندی</string>
    <string name="vnspeak_volume_decrease">کاهش بلندی</string>
    <string name="vnspeak_volume_increase">افزایش بلندی</string>
    <string name="vnspeak_pitch">زیر و بمی</string>
    <string name="vnspeak_pitch_decrease">کاهش زیر و بمی</string>
    <string name="vnspeak_pitch_increase">افزایش زیر و بمی</string>
    <string name="vnspeak_select_language">انتخاب زبان:</string>
    <string name="vnspeak_reset">پیش فرض</string>
    <string name="vnspeak_increase">+</string>
    <string name="vnspeak_decrease">-</string>
    <string name="vnspeak_select_voice">یک صدا برای این زبان انتخاب کنید:</string>
    <string name="vnspeak_language">زبان</string>
    <string name="vnspeak_concatenator_be"> به </string>
    <string name="enter_word_userdict_a">واژه را وارد نمایید</string>
    <string name="enter_word_userdict_a_hint">واژه جاری</string>
    <string name="enter_word_userdict_b">رشته آوایی آن را وارد نمایید</string>
    <string name="enter_word_userdict_b_hint">رشته آوایی</string>
    <string name="userdict_wordlist_nowords_1">No words added</string>
    <string name="userdict_wordlist_nowords_2">User dictionary is empty</string>
    <string name="userdict_addword_add_button">افزودن</string>
    <string name="userdict_suggest_button">پیشنهاد</string>
    <string name="userdict_read_button">خواندن</string>
    <string name="userdict_replace_button">جایگزین</string>
    <string name="userdict_pos_unknown">نامشخص</string>
    <string name="userdict_pos_noun">اسم</string>
    <string name="userdict_pos_verb">فعل</string>
    <string name="userdict_pos_adv">قید</string>
    <string name="userdict_pos_adj">صفت</string>
    <string name="userdict_pos_pron">ضمیر</string>
    <string name="userdict_pos_num">عدد</string>
    <string name="userdict_pos_prep">حرف اضافه</string>
    <string name="userdict_pos_conj">حرف ربط</string>
    <string name="userdict_addword_screen_title">افزودن واژه</string>
    <string name="userdict_addword_error_word_empty">فیلد واژه نباید خالی باشد</string>
    <string name="userdict_addword_error_pronunce_empty">فیلد رشته آوایی نباید خالی باشد</string>
    <string name="userdict_addword_error_word_wrong">واژه باید فقط شامل حروف فارسی باشد</string>
    <string name="userdict_addword_error_pronunce_wrong">رشته آوایی نادرست می باشد</string>
    <string name="userdict_addword_error_word_double">واژه وارد شده تکراری می باشد</string>
    <string name="userdict_wordlist_menu_delete">حذف</string>
    <string name="userdict_wordlist_menu_change">تغییر</string>
    <string name="userdict_wordlist_search">جستجو</string>
    <string name="userdict_addword_new_succeed_msg">واژه با موفقیت افزوده گردید</string>
    <string name="userdict_addword_change_succeed_msg">واژه با موفقیت تغییر یافت</string>
    <string name="title_activity_voice_settings">VoiceSettingsActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="persian_voice_default">1</string>
    <string name="persian_voice_pitch_default">50</string>
    <string name="persian_voice_rate_default">50</string>
    <string name="persian_voice_volume_default">100</string>
    <string name="english_voice_pitch_default">50</string>
    <string name="english_voice_rate_default">50</string>
    <string name="english_voice_volume_default">100</string>
    <string name="tts_number_mode_default">0</string>
    <string name="tts_digits_language_default">2</string>
    <string name="tts_punctuation_mode_default">0</string>
    <string name="tts_emoji_mode_default">1</string>
    <string name="persian_language">فارسی</string>
    <string name="english_language">انگلیسی</string>
    <string name="sina_voice">سینا</string>
    <string name="mina_voice">مینا</string>
    <string name="lorem_ipsum">sum</string>
    <string name="punctuaions_header">علائم</string>
    <string name="number_header">اعداد</string>
    <string name="number_digits_header">زبان اعداد</string>
    <string name="None">هیچکدام</string>
    <string name="Some">پیش فرض</string>
    <string name="All">همه</string>
    <string name="OneDigit">تک رقمی</string>
    <string name="Pairs">دو رقمی</string>
    <string name="Triplets">سه رقمی</string>
    <string name="Number_Continuous">پیوسته</string>
    <string name="digits_language_farsi">فارسی</string>
    <string name="digits_language_english">انگلیسی</string>
    <string name="digits_language_default">وابسته به محتوا</string>
    <string name="digits_language_open">تغییر زبان اعداد</string>
    <string name="digits_language_summary_description">زبان فعلی اعداد: %1$s</string>
    <string name="userdict_wordlist_header">لیست واژگان کاربر</string>
    <string name="user_dictionary_manage_header">مدیریت واژگان کاربر</string>
    <string name="user_dictionary_manage_body">واژگان سفارشی خود را در این بخش مدیریت کنید. برای وارد کردن، تنها فایل‌های با پسوند ‎.dict‎ را انتخاب کنید.</string>
    <string name="user_dictionary_export">صدور واژگان کاربر</string>
    <string name="user_dictionary_import">وارد کردن واژگان کاربر</string>
    <string name="user_dictionary_clear">حذف همه واژگان کاربر</string>
    <string name="user_dictionary_export_success">صدور واژگان کاربر با موفقیت در مسیر زیر انجام شد: %1$s</string>
    <string name="user_dictionary_export_error">در صدور واژگان کاربر خطایی رخ داد.</string>
    <string name="user_dictionary_export_missing">فایل واژگان کاربر یافت نشد.</string>
    <string name="user_dictionary_export_canceled">عملیات صدور واژگان کاربر لغو شد.</string>
    <string name="user_dictionary_import_success">%1$d واژه جدید پس از حذف موارد تکراری به واژگان کاربر افزوده شد.</string>
    <string name="user_dictionary_import_error">در وارد کردن واژگان کاربر خطایی رخ داد.</string>
    <string name="user_dictionary_import_picker_missing">برنامه‌ای برای انتخاب فایل یافت نشد.</string>
    <string name="user_dictionary_import_picker_unavailable">امکان باز کردن انتخاب‌گر فایل وجود ندارد.</string>
    <string name="user_dictionary_import_empty">واژگانی افزوده نگردید.</string>
    <string name="user_dictionary_import_canceled">عملیات وارد کردن واژگان کاربر لغو شد.</string>
    <string name="user_dictionary_import_no_file_selected">هیچ فایلی انتخاب نشد.</string>
    <string name="user_dictionary_import_idle">در انتظار وارد کردن واژگان...</string>
    <string name="user_dictionary_import_in_progress">در حال وارد کردن واژگان...</string>
    <string name="user_dictionary_import_success_status">وارد کردن واژگان کامل شد.</string>
    <string name="user_dictionary_import_error_status">در وارد کردن واژگان خطایی رخ داد.</string>
    <string name="user_dictionary_import_invalid_type">لطفاً فقط فایل با پسوند ‎.dict‎ را انتخاب کنید.</string>
    <string name="user_dictionary_import_invalid_type_status">فایل انتخاب‌شده یک واژگان کاربر معتبر نیست.</string>
    <string name="user_dictionary_import_security_error">مجوز دسترسی به فایل واژگان وجود ندارد.</string>
    <string name="user_dictionary_import_security_error_status">به دلیل محدودیت دسترسی، وارد کردن واژگان انجام نشد.</string>
    <string name="user_dictionary_import_io_error">خطا در خواندن فایل واژگان کاربر.</string>
    <string name="user_dictionary_import_io_error_status">خطایی در هنگام خواندن فایل واژگان رخ داد.</string>
    <string name="user_dictionary_import_picker_missing_status">امکان باز کردن فایل‌های واژگان وجود ندارد.</string>
    <string name="user_dictionary_import_picker_unavailable_status">انتخاب‌گر فایل در دسترس نیست.</string>
    <string name="user_dictionary_import_canceled_status">وارد کردن واژگان متوقف شد.</string>
    <string name="user_dictionary_import_no_file_selected_status">هیچ فایل واژگانی برای وارد کردن دریافت نشد.</string>
    <string name="user_dictionary_import_merge_error_status">ادغام فایل واژگان انجام نشد.</string>
    <string name="user_dictionary_export_status_saved">فایل واژگان کاربر در مسیر زیر ذخیره شد: %1$s</string>
    <string name="user_dictionary_export_status_error">صدور واژگان کاربر ناموفق بود.</string>
    <string name="user_dictionary_clear_success">%1$d واژه از واژگان کاربر حذف شد.</string>
    <string name="user_dictionary_clear_empty">واژه‌ای برای حذف وجود ندارد.</string>
    <string name="userdict_neword_header">افزودن واژه</string>
    <string name="emoji_setting_header">شکلک ها</string>
    <string name="emoji_setting_active">فعال</string>
    <string name="emoji_setting_inactive">غیر فعال</string>
    <string name="license_title">ثبت نام</string>
    <string name="license_firstname">نام</string>
    <string name="license_lastname">نام خانوادگی</string>
    <string name="license_mobile">شماره موبایل</string>
    <string name="save_to_file">ساخت فایل صوتی</string>
    <string name="setting_tts_open">صفحه تنظیمات TTS</string>
</resources>