<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@+id/VoicesInactive" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="@id/constraintLayout">
        <TextView android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/voice_settings_header" style="@android:style/TextAppearance.Medium" />
    </LinearLayout>
    <ScrollView android:id="@+id/scroller" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="@id/constraintLayout">
        <LinearLayout android:orientation="vertical" android:id="@+id/VoiceSettings" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@+id/linear_voice" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:gravity="start" android:id="@+id/select_voice_header" android:background="#ff293842" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/voice_settings_header" style="@android:style/TextAppearance.Medium" />
                </RelativeLayout>
                <TextView android:gravity="start" android:id="@+id/text22" android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip" android:text="@string/vnspeak_select_language" android:layout_marginStart="5.0dip" style="@android:style/TextAppearance.Medium"
                    android:layout_marginLeft="5.0dip" />
                <Spinner android:id="@+id/vnspeak_languages" android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="2.0dip" android:prompt="@string/vnspeak_language" android:layout_marginStart="5.0dip" style="@android:style/TextAppearance.Medium"
                    android:layout_marginLeft="5.0dip" />
                <TextView android:gravity="start" android:id="@+id/text33" android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip" android:text="@string/vnspeak_select_voice" android:layout_marginStart="5.0dip" style="@android:style/TextAppearance.Medium"
                    android:layout_marginLeft="5.0dip" />
                <LinearLayout android:orientation="horizontal" android:id="@+id/voice" android:layout_width="fill_parent" android:layout_height="fill_parent"
                    android:layout_marginStart="5.0dip"
                    android:layout_marginLeft="5.0dip">
                    <Spinner android:id="@+id/vnspeak_voices" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:prompt="@string/vnspeak_language" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
                    <Button android:id="@+id/testbutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/voice_test" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/params" android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:layout_marginStart="5.0dip"
                android:layout_marginLeft="5.0dip">
                <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vnspeak_speed" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <Button android:layout_gravity="start" android:id="@+id/vnspeak_speed_decrease" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vnspeak_decrease" android:contentDescription="@string/vnspeak_speed_decrease" style="?android:buttonStyleSmall" />

                    <SeekBar
                        android:id="@+id/speed_slider"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:max="100"
                        android:progress="0"
                        android:secondaryProgress="0" />
                    <Button android:layout_gravity="end" android:id="@+id/vnspeak_speed_increase" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vnspeak_increase" android:contentDescription="@string/vnspeak_speed_increase" style="?android:buttonStyleSmall" />
                </LinearLayout>
                <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vnspeak_volume" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <Button android:layout_gravity="start" android:id="@+id/vnspeak_volume_decrease" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vnspeak_decrease" android:contentDescription="@string/vnspeak_volume_decrease" style="?android:buttonStyleSmall" />

                    <SeekBar
                        android:id="@+id/volume_slider"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:max="100"
                        android:progress="0"
                        android:secondaryProgress="0" />
                    <Button android:layout_gravity="end" android:id="@+id/vnspeak_volume_increase" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vnspeak_increase" android:contentDescription="@string/vnspeak_volume_increase" style="?android:buttonStyleSmall" />
                </LinearLayout>
                <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vnspeak_pitch" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <Button android:layout_gravity="start" android:id="@+id/vnspeak_pitch_decrease" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vnspeak_decrease" android:contentDescription="@string/vnspeak_pitch_decrease" style="?android:buttonStyleSmall" />

                    <SeekBar
                        android:id="@+id/pitch_slider"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:max="100"
                        android:progress="0"
                        android:secondaryProgress="0" />
                    <Button android:layout_gravity="end" android:id="@+id/vnspeak_pitch_increase" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vnspeak_increase" android:contentDescription="@string/vnspeak_pitch_increase" style="?android:buttonStyleSmall" />
                </LinearLayout>
            </LinearLayout>
            <Button android:layout_gravity="center" android:id="@+id/vnspeak_reset" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vnspeak_reset" android:contentDescription="@string/vnspeak_reset" style="?android:buttonStyleSmall" />
            <Button
                android:id="@+id/btnShowTtsSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/setting_tts_open"
                style="?android:buttonStyleSmall" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
