<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="32sp"
        android:text="@string/punctuaions_header"
        android:paddingStart="5dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/None" />

        <RadioButton
            android:id="@+id/radio_some"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/Some" />

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/All" />

    </RadioGroup>

</LinearLayout>