<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.ParsAvaActivity">
    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer_branding"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer_branding"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/voice_label"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/voice_label"
            android:textAlignment="textStart"
            android:gravity="start" />

        <Button
            android:id="@+id/engine_command"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/voice_command"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="6dp"
            android:gravity="start" />

        <TextView
            android:id="@+id/general_label"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/general_label" />

        <Button
            android:id="@+id/puncuation_command"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/puncuation_command"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="6dp"
            android:gravity="start" />
        <Button
            android:id="@+id/number_command"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/number_command"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="6dp"
            android:gravity="start" />
        <Button
            android:id="@+id/number_language_command"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/number_language_command"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="6dp"
            android:gravity="start" />
        <Button
            android:id="@+id/emoji_command"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/emoji_command"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="start"
            android:layout_marginLeft="6dp" />



        <!--
        <Button
            android:id="@+id/engineSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_settings" />

        <Button
            android:id="@+id/ttsSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/tts_settings" />
        -->
        <TextView
            android:id="@+id/advanced_title"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/advanced_title" />

        <Button
            android:id="@+id/save_to_file"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textAlignment="textStart"
            android:text="@string/save_to_file"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="6dp"
            android:gravity="start"/>

        <Button
            android:id="@+id/tts_sample"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/tts_sample"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="6dp"
            android:gravity="start" />

        <Button
            android:id="@+id/register_command"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/register_command"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="gone"
            android:gravity="start"
            android:layout_marginLeft="6dp" />

        <Button
            android:id="@+id/support_command"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/support_command"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="visible"
            android:gravity="start"
            android:layout_marginLeft="6dp" />

        <Button
            android:id="@+id/about_command"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/about_command"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="start"
            android:layout_marginLeft="6dp" />

        <!--<EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sample_text"
            android:text="تماس ورودی, ‏‪+98 21 9100 2911‬‏, ۱۸:۱۶, ۸ از ۱۰۹"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        -->
        <!--<ListView
            android:id="@+id/listViewEngines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            />-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/failure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer_branding"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_failed" />
    </LinearLayout>

    <TextView
        android:id="@+id/footer_branding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:gravity="start"
        android:paddingEnd="4dp"
        android:text="@string/footer_branding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:attr/textColorPrimary"
        android:textDirection="rtl" />

</RelativeLayout>
