<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="5dp"
            android:text="@string/number_header"
            android:textSize="32sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_one_digit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/OneDigit"
                android:text="@string/OneDigit"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioButton
                android:id="@+id/radio_pairs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Pairs"
                android:text="@string/Pairs"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioButton
                android:id="@+id/radio_triplets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Triplets"
                android:text="@string/Triplets"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioButton
                android:id="@+id/radio_continuous"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Number_Continuous"
            android:text="@string/Number_Continuous"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </RadioGroup>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
